# pace

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
cmake/: CompilerWarnings.cmake
docs/: home-assistant-mqtt.yaml
include/pace/: Config.hpp  MqttService.hpp  Pace.hpp  SensorFactory.hpp  SensorTimer.hpp  SignalShutdownWatcher.hpp  SystemExecutor.hpp
include/pace/commands/: BaseCommand.hpp  ExecCommand.hpp  KillCommand.hpp  NotifyCommand.hpp  NullCommand.hpp  PingCommand.hpp  StopCommand.hpp  SystemActionCommand.hpp  SystemExecutor.hpp  TypedCommand.hpp
include/pace/sensor/: BaseSensor.hpp  CountSensor.hpp  SensorProvider.hpp  TypedSensor.hpp
include/pace/sensors/: BaseSensor.hpp  CountSensor.hpp  GameSensor.hpp  ProcSensor.hpp  SensorProvider.hpp
include/util/: AsyncTaskDispatcher.hpp  Executor.hpp  PeriodicScheduler.hpp  QueueAwaiter.hpp  Task.hpp  TaskQueue.hpp  TimerAwaiter.hpp  TokenAwaiter.hpp  expected.hpp
src/common/: BaseCommand.cpp  BaseSensor.cpp  Config.cpp  MqttService.cpp  Pace.cpp  SensorFactory.cpp  SensorTimer.cpp  SystemExecutor.cpp  main.cpp
src/platform/linux/: SensorProvider.cpp  SignalShutdownWatcher.cpp  SystemExecutor.cpp
src/platform/windows/: SensorProvider.cpp  SignalShutdownWatcher.cpp  SystemExecutor.cpp  WinHandle.hpp
tests/: ConfigTests.cpp  QueueAwaiterTests.cpp  TaskQueueTests.cpp  TaskTests.cpp
